# vanassistant

./: .gitignore  CMakeLists.txt  Makefile  Makefile.wasm  PI.cmake  README.md  WASM.cmake  X11.cmake  compile_flags.txt
embedded/: atmega2560-va-serialhub.code-workspace  esp32-s3-va-imu-sender.code-workspace
embedded/atmega2560-va-serialhub/: platformio.ini
embedded/atmega2560-va-serialhub/src/: main.cpp
embedded/esp32-s3-va-imu-calibration/: platformio.ini
embedded/esp32-s3-va-imu-sender/: LICENSE  platformio.ini
embedded/esp32-s3-va-imu-sender/src/: GUI_Paint.h  SerialProtocol.h  fonts.h  main.cpp
embedded/test_esp32_8bitcomposite/: Computerfont12pt7b.h  Computerfont6pt7b.h  test_esp32_8bitcomposite.ino
embedded/va-video/: platformio.ini
embedded/va-video/src/: main.cpp
esp32/: esp32-s3-va-imu-calibration.code-workspace
esp32/esp32-s3-va-imu-calibration/boards/: waveshare_esp32s3_touch_lcd_128.json
esp32/esp32-s3-va-imu-calibration/src/: main.cpp
esp32/esp32-s3-va-imu-sender/src/: GUI_Paint.cpp  LCD_Test.h
esp32/test_esp32_8bitcomposite/: Computerfont10pt7b.h  Computerfont14pt7b.h
esp32/va-video/src/: main.cpp
gfx/: counterdigits.aseprite  dashboard.aseprite  face_mask.blend  mockup_ui_menu.aseprite  mockup_ui_roadpage.aseprite  mockup_ui_roadpage2.aseprite  mockup_ui_roadpage3.aseprite  page_road.aseprite  scout.blend  scout_edited.blend  scout_headonly.blend  scout_onlyhead_edited.blend  scout_onlyjaw.blend  scout_onlyjaw_edited.blend  scout_onlymic_edited.blend
include/: DrzOlcPixelGameEngine.h  Drz_Engine_FB.h  Drz_Engine_PGE.h  Drz_Inputs_PGE.h  Drz_Inputs_hidraw.h  Drz_PGE_Engine.h  Drz_Sam_Miniaudio.h  Drz_Serial_Termios.h  Drz_Serial_Windows.h  IDisplayPage.h  IDrzEngine.h  IDrzInputs.h  IDrzSam.h  IDrzSerial.h  gfx3d.h  miniaudio.h  olcPGEX_Graphics3D.h  olcPGEX_QuickGUI.h  olcPixelGameEngine.h
include/fb/: fbgraphics.h
include/sam/: RenderTabs.h  render.h
lib/drzengine/include/: Drz_Engine_FB.h  Drz_Engine_PGE.h  Drz_Inputs_PGE.h  Drz_Inputs_hidraw.h  Drz_Sam_Miniaudio.h  IDrzEngine.h  IDrzInputs.h  IDrzSam.h  gfx3d.h
lib/drzengine/src/: Drz_Engine_FB.cpp  Drz_Engine_PGE.cpp
lib/fb/src/: fbgraphics.c
lib/sam/src/: createtransitions.c  reciter.c  sam.c
scripts/: deploy_pi.sh  make_sprite_header.py
src/: Drz_FB_Engine.h  Drz_Miniaudio_Sam.h  Drz_PGE_Engine.h  Drz_Serial.h  Drz_SerialInput.h  VanAssistantApp.cpp  VanAssistantApp.h  _before_main_pge.cpp  main.cpp  main_fb.cpp  main_pge.cpp  main_pge_win.cpp  olcPixelGameEngine.cpp
src/fb/: fbg_fbdev.c  fbg_fbdev.h  fbgraphics.h
src/fb/lodepng/: lodepng.c
src/fonts/: Computerfont18pt7b.h  Mono_Regular12pt7b.h  Mono_Regular14pt7b.h  Mono_Regular18pt7b.h  Mono_Regular8pt7b.h  Monofont18pt7b.h  Monofont8pt7b.h  Solid_Mono3pt7b.h  Solid_Mono4pt7b.h  Solid_Mono6pt7b.h  Solid_Mono8pt7b.h
src/ressources/: asmtext.h
src/sam/: ReciterTabs.h  RenderTabs.h  SamTabs.h  createtransitions.c  debug.c  debug.h  mysam.h  processframes.c  reciter.c  reciter.h  render.c  sam.c  sam.h
src/vanassistant/: Animated3DObject.h  AnimatedObject.h  AsmText.h  DisplayPageManager.cpp  DisplayPageManager.h  FaceModel.h  Grid.h  IWidget.h  J7Model.h  Model.h  MySam.h  PageAssistant.cpp  PageAssistant.h  PageMenu.cpp  PageMenu.h  PagePark.h  PageRoad.cpp  PageRoad.h  Road.h  Scene.h  ScoutModel.h  SerialProtocol.h  Starfield.h  TextAnimator.h  VanAssistant.h  VanAssistantApp.cpp  VanAssistantApp.h  VerticalTextAnimator.h  Widget.cpp  Widget.h
src/vanassistant/fonts/: B612Mono_Regular6pt7b.h  Computerfont18pt7b.h  Mono_Regular12pt7b.h  Mono_Regular14pt7b.h  SevenSeg30pt7b.h  Seven_Segment50pt7b.h  Seven_Segment60pt7b.h  Solid_Mono3pt7b.h  Solid_Mono4pt7b.h  Solid_Mono6pt7b.h  Solid_Mono8pt7b.h  digital_clock50pt7b.h
src/vanassistant/pages/menu/: J7.h
src/vanassistant/ressources/: asmtext.h
src/vanassistant/widgets/: WidgetMenuItem.h  WidgetSpeed.h
test_projects/template_drzengineproject/: CMakeLists.txt  main.cpp
test_projects/template_uconsole/: Makefile
test_projects/test_3drenderer/include/: J7Model.h  Scene.h
test_projects/test_3drenderer/src/: main.cpp
test_projects/test_gfx3d/: CMakeLists.txt  main.cpp
test_projects/test_gfx3d/include/: J7.h
test_projects/test_grid/: Makefile
test_projects/test_grid/src/: main.cpp
test_projects/test_isogrid/: Makefile
test_projects/test_isogrid/src/: IsometricGrid3dRenderer.h  ModelCube.h  ModelSpaceship.h  main.cpp
test_projects/test_pgefb/: CMakeLists.txt  FramebufferPlatform.h  main.cpp
test_projects/test_pgetinker/: Makefile.wasm
test_projects/test_pgetinker/src/: main.cpp
test_projects/test_samminiaudio/: CMakeLists.txt  Drz_Miniaudio_Sam.h  IDrzSam.h  main.cpp
test_projects/test_samminiaudio/sam/: debug.c  reciter.c  render.c
test_projects/test_serialdata/: CMakeLists.txt  Makefile
test_projects/test_serialdata/src/: Counter.h  Gauge.h  main.cpp
test_projects/test_starfield/: CMakeLists.txt  main.cpp
test_projects/test_starfield/src/: main.cpp
test_projects/test_textanimator/src/: main.cpp
test_projects/test_verticaltextanimator/: Makefile
test_projects/test_verticaltextanimator/src/: main.cpp
testprojects/template_uconsole/include/: J7Model.h  Model.h
testprojects/template_uconsole/src/: main.cpp
testprojects/test_3drenderer/include/: J7Model.h  Model.h  Scene.h  ScoutModel.h
testprojects/test_3drenderer/src/: main.cpp
testprojects/test_grid/src/: main.cpp
testprojects/test_pgetinker/: Makefile.wasm
testprojects/test_pgetinker/src/: J7Model.h  Model.h  main.cpp
testprojects/test_starfield/: Makefile
testprojects/test_starfield/src/: main.cpp
testprojects/test_textanimator/src/: main.cpp
tools/: .gitignore  CMakeLists.txt  make_img.sh
tools/font-to-header/: CMakeLists.txt  fontconvert.cpp  fontconvert.hpp  main.cpp
tools/obj-viewer/: CMakeLists.txt  main.cpp
tools/object-to-header/: obj2h.cpp
tools/png-to-header/: CMakeLists.txt  main.cpp
tools/serial-gui/: CMakeLists.txt  README.md
tools/serial-gui/src/: main.cpp
wasm/: shell.html  vanassistant_shell.html  wasmserve.py
(+76 files in other folders)
